# cookiecutter-ml-hpc

./: README.md  ccds-help.json  ccds.json
.github/ISSUE_TEMPLATE/: feature-request.yaml
{{ cookiecutter.project_slug }}/: .gitignore  LICENSE  Makefile  README.md  RESULTS.md  SLURM.md  TROUBLESHOOT.md  params.yaml  pyproject.toml  requirements.txt
{{ cookiecutter.project_slug }}/.github/: pull_request_template.md
{{ cookiecutter.project_slug }}/.github/ISSUE_TEMPLATE/: bug-report.yaml  doc-request.yaml
{{ cookiecutter.project_slug }}/notebooks/: README.md
{{ cookiecutter.project_slug }}/scripts/: experiment_tracker.py  setup_env.sh
{{ cookiecutter.project_slug }}/scripts/slurm/: download_datasets.sh  nvidia_smi.sh  slurm_data_download_and_prep.sh  slurm_hyperparameter_search.sh  slurm_model_evaluation.sh  slurm_model_training.sh  slurm_model_training_distributed.sh  slurm_template.sh
{{ cookiecutter.project_slug }}/slurm/: nvidia_smi.sh  run_example.sh
{{ cookiecutter.project_slug }}/src/core/utils/: argument_parsers.py
{{ cookiecutter.project_slug }}/src/pipelines/: data_processing.py  model_evaluate.py  model_training.py
{{ cookiecutter.project_slug }}/src/utils/: checkpointing.py  logger.py  metrics.py
{{ cookiecutter.project_slug }}/storage/models/: .gitignore
