[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version|default('0.1.0') }}"
description = "{{ cookiecutter.project_description }}"
requires-python = ">={{ cookiecutter.python_version|default('3.10') }}"
authors = [
    {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}
]
maintainers = [
    {name = "{{ cookiecutter.maintainer_name|default(cookiecutter.author_name) }}", email = "{{ cookiecutter.maintainer_email|default(cookiecutter.author_email) }}"}
]
license = { file = "LICENSE" }
readme = "README.md"

dynamic = ["dependencies"]
keywords = [
    "python",
    "machine learning",
    "natural language processing"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: {{ cookiecutter.python_version|default('3.10') }}",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "{{ cookiecutter.homepage|default('https://github.com/' ~ cookiecutter.github_username ~ '/' ~ cookiecutter.project_name) }}"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "flake8-pyproject"
]

[tool.pytest]
testpaths = ["tests"]

[tool.black]
line-length = {{ cookiecutter.line_length|default(120) }}
target-version = ["py{{ cookiecutter.python_version.replace('.', '')|default('310') }}"]

[tool.isort]
profile = "black"
line_length = {{ cookiecutter.line_length|default(120) }}

[tool.flake8]
max-line-length = {{ cookiecutter.line_length|default(120) }}
ignore = ["E731", "E501", "W503"]
exclude = [".git", "data", "logs", "results",  "models", "results"]
